--- a/app/src/main/res/layout/activity_detail_laporan.xml
+++ b/app/src/main/res/layout/activity_detail_laporan.xml
@@ -167,5 +167,33 @@
             android:layout_height="wrap_content"/>
 
     </LinearLayout>
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:id="@+id/detailLaporanActivity_linearlayout6"
+        app:layout_constraintTop_toBottomOf="@id/detailLaporanActivity_linearlayout5"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        android:orientation="horizontal"
+        android:layout_marginHorizontal="10dp"
+        android:layout_height="wrap_content">
+
+        <Button
+            android:layout_width="wrap_content"
+            android:layout_weight="1"
+            android:id="@+id/detailLaporanActivity_btn_startProgress"
+            android:paddingVertical="5dp"
+            android:text="MULAI PROGRESS"
+            android:layout_marginHorizontal="10dp"
+            android:layout_height="wrap_content"/>
+        <Button
+            android:layout_width="wrap_content"
+            android:layout_weight="1"
+            android:id="@+id/detailLaporanActivity_btn_completeProgress"
+            android:paddingVertical="5dp"
+            android:text="SELESAI"
+            android:layout_marginHorizontal="10dp"
+            android:layout_height="wrap_content"/>
+
+    </LinearLayout>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
