--- a/app/src/main/res/layout/activity_detail_laporan.xml
+++ b/app/src/main/res/layout/activity_detail_laporan.xml
@@ -169,11 +169,12 @@
     </LinearLayout>
     <LinearLayout
         android:layout_width="match_parent"
-        android:id="@+id/detailLaporanActivity_linearlayout6"
+        android:id="@+id/detailLaporanActivity_linearlayout_if_waiting"
         app:layout_constraintTop_toBottomOf="@id/detailLaporanActivity_linearlayout5"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         android:orientation="horizontal"
+        android:layout_marginVertical="10dp"
         android:layout_marginHorizontal="10dp"
         android:layout_height="wrap_content">
 
@@ -188,12 +189,58 @@
         <Button
             android:layout_width="wrap_content"
             android:layout_weight="1"
-            android:id="@+id/detailLaporanActivity_btn_completeProgress"
+            android:id="@+id/detailLaporanActivity_btn_completeProgress_if_waiting"
             android:paddingVertical="5dp"
             android:text="SELESAI"
             android:layout_marginHorizontal="10dp"
             android:layout_height="wrap_content"/>
 
     </LinearLayout>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:id="@+id/detailLaporanActivity_linearlayout_if_onProgress"
+        app:layout_constraintTop_toBottomOf="@id/detailLaporanActivity_linearlayout5"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        android:orientation="horizontal"
+        android:layout_marginVertical="10dp"
+        android:layout_marginHorizontal="10dp"
+        android:layout_height="wrap_content">
+
+        <Button
+            android:layout_width="wrap_content"
+            android:layout_weight="1"
+            android:id="@+id/detailLaporanActivity_btn_completeProgress_if_onprogress"
+            android:paddingVertical="5dp"
+            android:text="SELESAI"
+            android:layout_marginHorizontal="10dp"
+            android:layout_height="wrap_content"/>
+
+    </LinearLayout>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:id="@+id/detailLaporanActivity_linearlayout_if_progressComplete"
+        app:layout_constraintTop_toBottomOf="@id/detailLaporanActivity_linearlayout5"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        android:orientation="horizontal"
+        android:layout_marginVertical="10dp"
+        android:layout_marginHorizontal="10dp"
+        android:layout_height="wrap_content">
+
+        <Button
+            android:layout_width="wrap_content"
+            android:layout_weight="1"
+            android:id="@+id/detailLaporanActivity_btn_see_detail_report"
+            android:paddingVertical="5dp"
+            android:text="SELESAI"
+            android:layout_marginHorizontal="10dp"
+            android:layout_height="wrap_content"/>
+
+    </LinearLayout>
+
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
