--- a/app/src/main/res/layout/activity_detail_laporan_selesai.xml
+++ b/app/src/main/res/layout/activity_detail_laporan_selesai.xml
@@ -1,9 +1,54 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".ui.DetailLaporanSelesaiActivity">
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+    <ImageSwitcher
+        android:layout_width="match_parent"
+        android:layout_height="300dp"
+        android:id="@+id/detailLaporanSelesaiActivity_image"
+        android:layout_marginVertical="30dp" />
+
+    <ImageView
+        android:layout_width="match_parent"
+        android:layout_height="300dp"
+        android:id="@+id/detailLaporanSelesaiActivity_imageViewLayout"
+        android:src="@drawable/ic_camera_black"/>
+        android:layout_marginVertical="30dp"/>
+    <Button
+        android:layout_width="wrap_content"
+        android:text="SEBELUMNYA"
+        android:id="@+id/detailLaporanSelesaiActivity_btnPrevious"
+        android:layout_below="@id/detailLaporanSelesaiActivity_image"
+        android:layout_height="wrap_content"/>
+    <Button
+        android:layout_width="wrap_content"
+        android:text="SELANJUTNYA"
+        android:id="@+id/detailLaporanSelesaiActivity_btnNext"
+        android:layout_below="@id/detailLaporanSelesaiActivity_image"
+        android:layout_alignParentEnd="true"
+        android:layout_height="wrap_content"
+        android:layout_alignParentRight="true" />
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_marginHorizontal="15dp"
+        android:layout_marginVertical="30dp"
+        android:layout_below="@id/detailLaporanSelesaiActivity_btnNext"
+        android:layout_height="50dp">
+
+        <TextView
+            android:layout_width="100dp"
+            android:text="Keterangan : "
+            android:layout_height="wrap_content"/>
+        <EditText
+            android:layout_width="match_parent"
+            android:hint="Tulis keterangan disini..."
+            android:layout_height="wrap_content"/>
+
+    </LinearLayout>
+
+</RelativeLayout>
