--- a/app/src/main/res/layout/activity_detail_laporan_selesai.xml
+++ b/app/src/main/res/layout/activity_detail_laporan_selesai.xml
@@ -35,6 +35,7 @@
 
     <LinearLayout
         android:layout_width="match_parent"
+        android:id="@+id/detailLaporanSelesaiActivity_linearlayoutdetail"
         android:layout_marginHorizontal="15dp"
         android:layout_marginVertical="30dp"
         android:layout_below="@id/detailLaporanSelesaiActivity_btnNext"
@@ -46,9 +47,26 @@
             android:layout_height="wrap_content"/>
         <EditText
             android:layout_width="match_parent"
+            android:id="@+id/detailLaporanSelesaiActivity_detailByAdmin"
             android:hint="Tulis keterangan disini..."
             android:layout_height="wrap_content"/>
 
     </LinearLayout>
+
+    <Button
+        android:layout_width="wrap_content"
+        android:id="@+id/detailLaporanSelesaiActivity_btnSubmit"
+        android:layout_alignParentBottom="true"
+        android:layout_centerHorizontal="true"
+        android:text="SUBMIT"
+        android:layout_marginVertical="20dp"
+        android:layout_height="wrap_content"/>
+
+    <ProgressBar
+        android:layout_width="wrap_content"
+        android:layout_centerHorizontal="true"
+        android:layout_centerVertical="true"
+        android:id="@+id/detailLaporanSelesaiActivity_loadingBar"
+        android:layout_height="wrap_content"/>
 
 </RelativeLayout>
