--- a/app/src/main/res/layout/fragment_onprogress.xml
+++ b/app/src/main/res/layout/fragment_onprogress.xml
@@ -15,6 +15,16 @@
         tools:listitem="@layout/item_disaster_case"
         android:layout_height="wrap_content"/>
 
+    <TextView
+        android:layout_width="wrap_content"
+        android:id="@+id/fragmentOnProgress_isDisasterCaseIsEmpty"
+        android:text="TIDAK ADA PELAPORAN YANG SEDANG BERLANGSUNG"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
+        android:layout_height="wrap_content"/>
+
     <ProgressBar
         android:layout_width="wrap_content"
         android:id="@+id/fragmentOnProgress_loadingBar"
