--- a/app/src/main/res/layout/fragment_waiting.xml
+++ b/app/src/main/res/layout/fragment_waiting.xml
@@ -6,13 +6,6 @@
     android:layout_height="match_parent"
     tools:context=".ui.waiting.WaitingFragment">
 
-    <Button
-        android:layout_width="wrap_content"
-        android:id="@+id/coba"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintLeft_toLeftOf="parent"
-        android:layout_height="wrap_content"/>
-
     <androidx.recyclerview.widget.RecyclerView
         android:layout_width="match_parent"
         android:id="@+id/waitingfragment_recycleviewlayout"
@@ -20,6 +13,16 @@
         app:layout_constraintLeft_toLeftOf="parent"
         tools:listitem="@layout/item_disaster_case"
         android:layout_height="match_parent"/>
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:id="@+id/fragmentWaiting_isDisasterCaseIsEmpty"
+        android:text="BELUM ADA PELAPORAN YANG MASUK"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
+        android:layout_height="wrap_content"/>
 
     <ProgressBar
         android:layout_width="wrap_content"
