--- a/app/src/main/res/layout/activity_detail_laporan_selesai.xml
+++ b/app/src/main/res/layout/activity_detail_laporan_selesai.xml
@@ -4,69 +4,221 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ui.DetailLaporanSelesaiActivity">
-
-    <ImageSwitcher
-        android:layout_width="match_parent"
-        android:layout_height="300dp"
-        android:id="@+id/detailLaporanSelesaiActivity_image"
-        android:layout_marginVertical="30dp" />
+    tools:context=".ui.complete.DetailLaporanSelesai">
 
     <ImageView
         android:layout_width="match_parent"
-        android:layout_height="300dp"
-        android:id="@+id/detailLaporanSelesaiActivity_imageViewLayout"
-        android:src="@drawable/ic_camera_black"/>
-        android:layout_marginVertical="30dp"/>
-    <Button
-        android:layout_width="wrap_content"
-        android:text="SEBELUMNYA"
-        android:id="@+id/detailLaporanSelesaiActivity_btnPrevious"
-        android:layout_below="@id/detailLaporanSelesaiActivity_image"
-        android:layout_height="wrap_content"/>
-    <Button
-        android:layout_width="wrap_content"
-        android:text="SELANJUTNYA"
-        android:id="@+id/detailLaporanSelesaiActivity_btnNext"
-        android:layout_below="@id/detailLaporanSelesaiActivity_image"
-        android:layout_alignParentEnd="true"
-        android:layout_height="wrap_content"
-        android:layout_alignParentRight="true" />
+        android:background="@color/white"
+        android:id="@+id/detailLaporanSelesaiActivity_image"
+        android:layout_marginVertical="10dp"
+        android:layout_height="300dp"/>
 
-    <LinearLayout
+    <ScrollView
         android:layout_width="match_parent"
-        android:id="@+id/detailLaporanSelesaiActivity_linearlayoutdetail"
-        android:layout_marginHorizontal="15dp"
-        android:layout_marginVertical="30dp"
-        android:layout_below="@id/detailLaporanSelesaiActivity_btnNext"
-        android:layout_height="50dp">
+        android:layout_below="@id/detailLaporanSelesaiActivity_image"
+        android:paddingVertical="20dp"
+        android:layout_height="wrap_content">
 
-        <TextView
-            android:layout_width="100dp"
-            android:text="Keterangan : "
-            android:layout_height="wrap_content"/>
-        <EditText
+        <LinearLayout
             android:layout_width="match_parent"
-            android:id="@+id/detailLaporanSelesaiActivity_detailByAdmin"
-            android:hint="Tulis keterangan disini..."
-            android:layout_height="wrap_content"/>
+            android:gravity="center_horizontal"
+            android:layout_marginVertical="20dp"
+            android:orientation="vertical"
+            android:layout_height="wrap_content">
 
-    </LinearLayout>
+            <LinearLayout
+                android:layout_width="wrap_content"
+                android:orientation="horizontal"
+                android:layout_marginVertical="10dp"
+                android:layout_height="wrap_content">
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:text="TIPE BENCANA"
+                    android:layout_marginHorizontal="5dp"
+                    android:layout_height="wrap_content"/>
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:text="-"
+                    android:layout_marginHorizontal="5dp"
+                    android:layout_height="wrap_content"/>
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:text="KOTA BENCANA"
+                    android:textStyle="bold"
+                    android:id="@+id/detailLaporanSelesaiActivity_disasterCityLocation"
+                    android:layout_marginHorizontal="5dp"
+                    android:layout_height="wrap_content"/>
+            </LinearLayout>
 
-    <Button
-        android:layout_width="wrap_content"
-        android:id="@+id/detailLaporanSelesaiActivity_btnSubmit"
-        android:layout_alignParentBottom="true"
-        android:layout_centerHorizontal="true"
-        android:text="SUBMIT"
-        android:layout_marginVertical="20dp"
-        android:layout_height="wrap_content"/>
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_marginHorizontal="20dp"
+                android:layout_height="wrap_content"
+                android:background="@drawable/item_layout_border_bottom"
+                android:orientation="vertical">
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:text="DILAPORKAN OLEH"
+                    android:textColor="@color/purple_500"
+                    android:layout_marginHorizontal="5dp"
+                    android:layout_marginVertical="5dp"
+                    android:layout_height="wrap_content"/>
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:text="EMAIL PENGGUNA"
+                    android:textStyle="bold"
+                    android:layout_marginVertical="5dp"
+                    android:id="@+id/detailLaporanSelesaiActivity_reportByEmail"
+                    android:layout_marginHorizontal="5dp"
+                    android:layout_height="wrap_content"/>
+            </LinearLayout>
 
-    <ProgressBar
-        android:layout_width="wrap_content"
-        android:layout_centerHorizontal="true"
-        android:layout_centerVertical="true"
-        android:id="@+id/detailLaporanSelesaiActivity_loadingBar"
-        android:layout_height="wrap_content"/>
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:orientation="vertical"
+                android:layout_marginHorizontal="20dp"
+                android:background="@drawable/item_layout_border_bottom"
+                android:layout_marginVertical="10dp"
+                android:layout_height="wrap_content">
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:text="DILAPORKAN PADA"
+                    android:textColor="@color/purple_500"
+                    android:layout_marginHorizontal="5dp"
+                    android:layout_marginVertical="5dp"
+                    android:layout_height="wrap_content"/>
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:id="@+id/detailLaporanSelesaiActivity_disasterDateTime"
+                    android:textStyle="bold"
+                    android:text="JAM BENCANA"
+                    android:layout_marginHorizontal="5dp"
+                    android:layout_marginVertical="5dp"
+                    android:layout_height="wrap_content"/>
+            </LinearLayout>
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:orientation="vertical"
+                android:layout_marginHorizontal="20dp"
+                android:background="@drawable/item_layout_border_bottom"
+                android:layout_height="wrap_content">
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:text="LOKASI BENCANA"
+                    android:textColor="@color/purple_500"
+                    android:layout_marginHorizontal="5dp"
+                    android:layout_marginVertical="5dp"
+                    android:layout_height="wrap_content"/>
+                <LinearLayout
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content">
+                    <ImageView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:src="@drawable/ic_location_black"/>
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:text="BUKA MAPS"
+                        android:id="@+id/detailLaporanSelesaiActivity_openDetailMapsLocation"
+                        android:textStyle="bold"
+                        android:layout_marginVertical="5dp"
+                        android:textColor="@color/blue"
+                        android:layout_marginHorizontal="5dp"
+                        android:layout_height="wrap_content"/>
+                </LinearLayout>
+            </LinearLayout>
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:orientation="vertical"
+                android:layout_marginHorizontal="20dp"
+                android:background="@drawable/item_layout_border_bottom"
+                android:layout_marginVertical="10dp"
+                android:layout_height="wrap_content">
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:text="Detail dari pelapor"
+                    android:layout_marginVertical="5dp"
+                    android:textColor="@color/purple_500"
+                    android:layout_marginHorizontal="5dp"
+                    android:layout_height="wrap_content"/>
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_marginVertical="5dp"
+                    android:id="@+id/detailLaporanSelesaiActivity_detailByUser"
+                    android:text="DETAIL KETERANGAN OLEH PELAPOR"
+                    android:layout_marginHorizontal="5dp"
+                    android:layout_height="wrap_content"/>
+            </LinearLayout>
+
+            <TextView
+                android:layout_width="match_parent"
+                android:text="LAPORAN DARI ADMIN"
+                android:textStyle="bold"
+                android:layout_marginVertical="20dp"
+                android:gravity="center_horizontal"
+                android:layout_height="wrap_content"/>
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:orientation="vertical"
+                android:background="@drawable/item_layout_border_bottom"
+                android:layout_marginVertical="10dp"
+                android:layout_marginHorizontal="20dp"
+                android:layout_height="wrap_content">
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:text="FOTO PELAPORAN"
+                    android:layout_marginVertical="5dp"
+                    android:layout_marginHorizontal="5dp"
+                    android:layout_height="wrap_content"/>
+                <LinearLayout
+                    android:layout_width="wrap_content"
+                    android:orientation="horizontal"
+                    android:layout_height="wrap_content">
+                    <ImageView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginHorizontal="5dp"
+                        android:src="@drawable/ic_camera_black"/>
+                    <TextView
+                        android:layout_width="match_parent"
+                        android:id="@+id/detailLaporanSelesaiActivity_openPhotoFromAdmin"
+                        android:text="LIHAT FOTO"
+                        android:textStyle="bold"
+                        android:layout_marginVertical="5dp"
+                        android:textColor="@color/blue"
+                        android:layout_marginHorizontal="5dp"
+                        android:layout_height="wrap_content"/>
+                </LinearLayout>
+            </LinearLayout>
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:orientation="vertical"
+                android:layout_marginHorizontal="20dp"
+                android:background="@drawable/item_layout_border_bottom"
+                android:layout_marginTop="10dp"
+                android:layout_marginBottom="30dp"
+                android:layout_height="wrap_content">
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:text="Keterangan dari admin"
+                    android:layout_marginHorizontal="5dp"
+                    android:layout_marginVertical="5dp"
+                    android:layout_height="wrap_content"/>
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:text="DETAIL DARI ADMIN"
+                    android:id="@+id/detailLaporanSelesaiActivity_detailByAdmin"
+                    android:layout_marginHorizontal="5dp"
+                    android:layout_marginVertical="5dp"
+                    android:layout_height="wrap_content"/>
+            </LinearLayout>
+
+        </LinearLayout>
+
+    </ScrollView>
 
 </RelativeLayout>
