--- a/app/src/main/res/layout/fragment_waiting.xml
+++ b/app/src/main/res/layout/fragment_waiting.xml
@@ -6,6 +6,14 @@
     android:layout_height="match_parent"
     tools:context=".ui.waiting.WaitingFragment">
 
+    <Button
+        android:layout_width="wrap_content"
+        android:id="@+id/coba"
+        android:layout_height="wrap_content"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintLeft_toLeftOf="parent"
+        android:text="coba"/>
+
     <androidx.recyclerview.widget.RecyclerView
         android:layout_width="match_parent"
         android:id="@+id/waitingfragment_recycleviewlayout"
