--- a/app/src/main/res/layout/activity_detail_laporan.xml
+++ b/app/src/main/res/layout/activity_detail_laporan.xml
@@ -59,7 +59,7 @@
         app:layout_constraintTop_toBottomOf="@id/detailLaporanActivity_disasterPhoto"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        android:orientation="horizontal"
+        android:orientation="vertical"
         android:layout_height="wrap_content">
         <TextView
             android:layout_width="wrap_content"
