--- a/app/src/main/res/layout/activity_detail_laporan.xml
+++ b/app/src/main/res/layout/activity_detail_laporan.xml
@@ -53,115 +53,123 @@
         android:layout_height="250dp"/>
 
     <LinearLayout
-        android:layout_width="wrap_content"
-        android:layout_marginVertical="20dp"
+        android:layout_width="match_parent"
         android:id="@+id/detailLaporanActivity_linearlayout2"
         app:layout_constraintTop_toBottomOf="@id/detailLaporanActivity_disasterPhoto"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         android:orientation="vertical"
+        android:layout_marginHorizontal="20dp"
+        android:background="@drawable/item_layout_border_bottom"
         android:layout_height="wrap_content">
         <TextView
             android:layout_width="wrap_content"
-            android:text="LAPORAN OLEH"
-            android:layout_marginHorizontal="5dp"
-            android:layout_height="wrap_content"/>
-        <TextView
-            android:layout_width="wrap_content"
-            android:text=":"
+            android:text="DILAPORKAN OLEH"
+            android:layout_marginVertical="5dp"
+            android:textColor="@color/purple_500"
             android:layout_marginHorizontal="5dp"
             android:layout_height="wrap_content"/>
         <TextView
             android:layout_width="wrap_content"
             android:text="EMAIL PELAPOR"
             android:textStyle="bold"
+            android:layout_marginVertical="5dp"
             android:id="@+id/detailLaporanActivity_reportByEmail"
             android:layout_marginHorizontal="5dp"
             android:layout_height="wrap_content"/>
     </LinearLayout>
 
     <LinearLayout
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:id="@+id/detailLaporanActivity_linearlayout3"
         android:layout_marginVertical="10dp"
         app:layout_constraintTop_toBottomOf="@id/detailLaporanActivity_linearlayout2"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        android:orientation="horizontal"
+        android:orientation="vertical"
+        android:layout_marginHorizontal="20dp"
+        android:background="@drawable/item_layout_border_bottom"
         android:layout_height="wrap_content">
         <TextView
             android:layout_width="wrap_content"
             android:text="DILAPORKAN PADA"
-            android:layout_marginHorizontal="5dp"
-            android:layout_height="wrap_content"/>
-        <TextView
-            android:layout_width="wrap_content"
-            android:text=":"
+            android:textColor="@color/purple_500"
+            android:layout_marginVertical="5dp"
             android:layout_marginHorizontal="5dp"
             android:layout_height="wrap_content"/>
         <TextView
             android:layout_width="wrap_content"
             android:text="JAM LAPORAN"
             android:textStyle="bold"
+            android:layout_marginVertical="5dp"
             android:id="@+id/detailLaporanActivity_disasterTime"
             android:layout_marginHorizontal="5dp"
             android:layout_height="wrap_content"/>
     </LinearLayout>
 
     <LinearLayout
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
+        android:background="@drawable/item_layout_border_bottom"
         android:id="@+id/detailLaporanActivity_linearlayout4"
         android:layout_marginVertical="10dp"
         app:layout_constraintTop_toBottomOf="@id/detailLaporanActivity_linearlayout3"
         app:layout_constraintLeft_toLeftOf="parent"
+        android:layout_marginHorizontal="20dp"
         app:layout_constraintRight_toRightOf="parent"
-        android:orientation="horizontal"
+        android:orientation="vertical"
         android:layout_height="wrap_content">
         <TextView
             android:layout_width="wrap_content"
             android:text="DETAIL LOKASI"
+            android:layout_marginVertical="5dp"
+            android:textColor="@color/purple_500"
             android:layout_marginHorizontal="5dp"
             android:layout_height="wrap_content"/>
-        <TextView
+        <LinearLayout
             android:layout_width="wrap_content"
-            android:text=":"
-            android:layout_marginHorizontal="5dp"
-            android:layout_height="wrap_content"/>
-        <ImageView
-            android:layout_width="wrap_content"
-            android:src="@drawable/ic_location_black"
-            android:layout_marginHorizontal="5dp"
-            android:layout_height="wrap_content"/>
-        <TextView
-            android:layout_width="wrap_content"
-            android:text="OPEN MAPS"
-            android:textStyle="bold"
-            android:textColor="@color/blue"
-            android:letterSpacing="0.1"
-            android:id="@+id/detailLaporanActivity_disasterDetailMapLocation"
-            android:layout_marginHorizontal="5dp"
-            android:layout_height="wrap_content"/>
+            android:orientation="horizontal"
+            android:layout_marginVertical="5dp"
+            android:layout_height="wrap_content">
+            <ImageView
+                android:layout_width="wrap_content"
+                android:src="@drawable/ic_location_black"
+                android:layout_marginHorizontal="5dp"
+                android:layout_height="wrap_content"/>
+            <TextView
+                android:layout_width="wrap_content"
+                android:text="OPEN MAPS"
+                android:textStyle="bold"
+                android:textColor="@color/blue"
+                android:letterSpacing="0.1"
+                android:id="@+id/detailLaporanActivity_disasterDetailMapLocation"
+                android:layout_marginHorizontal="5dp"
+                android:layout_height="wrap_content"/>
+        </LinearLayout>
+
     </LinearLayout>
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:orientation="horizontal"
+        android:orientation="vertical"
         android:id="@+id/detailLaporanActivity_linearlayout5"
-        android:gravity="center_horizontal"
         app:layout_constraintTop_toBottomOf="@id/detailLaporanActivity_linearlayout4"
         android:layout_marginVertical="10dp"
-        android:layout_marginHorizontal="20dp"
+        android:background="@drawable/item_layout_border_bottom"
         app:layout_constraintLeft_toLeftOf="parent"
+        android:layout_marginHorizontal="20dp"
         app:layout_constraintRight_toRightOf="parent"
         android:layout_height="wrap_content">
 
         <TextView
             android:layout_width="wrap_content"
-            android:text="DETAIIL : "
+            android:text="DETAIIL"
+            android:textColor="@color/purple_500"
+            android:layout_marginVertical="5dp"
             android:layout_height="wrap_content"/>
 
         <TextView
             android:layout_width="wrap_content"
+            android:layout_marginVertical="5dp"
             android:id="@+id/detailLaporanActivity_disasterDetailText"
             android:text="KOSONG"
             android:layout_height="wrap_content"/>
@@ -175,7 +183,7 @@
         app:layout_constraintRight_toRightOf="parent"
         android:orientation="horizontal"
         android:layout_marginVertical="10dp"
-        android:layout_marginHorizontal="10dp"
+        android:layout_marginHorizontal="20dp"
         android:layout_height="wrap_content">
 
         <Button
@@ -205,7 +213,7 @@
         app:layout_constraintRight_toRightOf="parent"
         android:orientation="horizontal"
         android:layout_marginVertical="10dp"
-        android:layout_marginHorizontal="10dp"
+        android:layout_marginHorizontal="20dp"
         android:layout_height="wrap_content">
 
         <Button
