--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -95,6 +95,7 @@
             android:layout_height="wrap_content"/>
         <EditText
             android:layout_width="match_parent"
+            android:inputType="textPassword"
             android:id="@+id/registeractivity_password"
             android:hint="Ketik password"
             android:layout_height="wrap_content"/>
@@ -115,6 +116,7 @@
             android:textColor="@color/purple_500"/>
         <EditText
             android:layout_width="match_parent"
+            android:inputType="textPassword"
             android:layout_marginVertical="5dp"
             android:id="@+id/registeractivity_confpassword"
             android:hint="Ketik konfirmasi password"
