--- a/app/src/main/res/layout/activity_detail_laporan.xml
+++ b/app/src/main/res/layout/activity_detail_laporan.xml
@@ -19,7 +19,7 @@
             android:layout_width="wrap_content"
             android:id="@+id/detailLaporanActivity_disasterType"
             app:layout_constraintTop_toTopOf="parent"
-            android:text="TIPE BENCANA"
+            android:text="KEBAKARAN"
             android:textSize="20dp"
             android:textStyle="bold"
             android:layout_marginHorizontal="5dp"
