--- a/app/src/main/res/layout/activity_detail_laporan_selesai.xml
+++ b/app/src/main/res/layout/activity_detail_laporan_selesai.xml
@@ -33,7 +33,7 @@
                 android:layout_height="wrap_content">
                 <TextView
                     android:layout_width="wrap_content"
-                    android:text="TIPE BENCANA"
+                    android:text="KEBAKARAN"
                     android:layout_marginHorizontal="5dp"
                     android:layout_height="wrap_content"/>
                 <TextView
