--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -12,7 +12,7 @@
         android:id="@+id/loginactivity_imageLogo"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        android:src="@color/black"
+        android:src="@drawable/logo_ancana_purple"
         app:layout_constraintRight_toRightOf="parent"
         android:layout_marginVertical="30dp"/>
 
