--- a/app/src/main/res/layout/item_disaster_case.xml
+++ b/app/src/main/res/layout/item_disaster_case.xml
@@ -27,7 +27,7 @@
             app:layout_constraintLeft_toRightOf="@id/item_image_disasterCase"
             android:layout_marginHorizontal="20dp"
             app:layout_constraintTop_toTopOf="parent"
-            android:text="KEBAKARAN"
+            android:text="TIPE BENCANA"
             android:textStyle="bold"
             android:layout_height="wrap_content"/>
         <TextView
